--- a/LinearLightsOut/app/src/main/res/values/colors.xml
+++ b/LinearLightsOut/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#1300de</color>
+    <color name="colorPrimaryDark">#1300fe</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="textColor">#5d5e5a</color>
+    <color name="background">#e7cb06</color>
 </resources>
