portraid and landscape working

--- a/LinearLightsOut/app/src/main/res/layout-land/activity_main.xml
+++ b/LinearLightsOut/app/src/main/res/layout-land/activity_main.xml
@@ -93,3 +93,21 @@
                 android:textSize="30sp"/>
 
         </TableRow>
+    </TableLayout>
+
+    <TextView
+        android:id="@+id/game_state_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/board"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:text="@string/instruction"
+        android:textColor="@color/textColor"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        />
+
+
+
+</RelativeLayout>
