--- a/LinearLightsOut/app/src/main/res/layout/activity_main.xml
+++ b/LinearLightsOut/app/src/main/res/layout/activity_main.xml
@@ -93,3 +93,20 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/board"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:text="@string/instruction"
+        android:textColor="@color/textColor"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        />
+
+    <Button
+        android:id="@+id/new_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@id/board"
+        android:layout_below="@id/board"
+        android:text="@string/new_game"
+        android:onClick="pressedNewGame"/>
+
+</RelativeLayout>
